<resources>
    <string name="app_name">UserCenter</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="loginSuccess">登陆成功</string>
    <string name="registerSuccess">注册成功</string>
    <string name="pressAgain">再按一次退出</string>
    <string name="forgetKey">忘记密码？</string>
    <string name="sendVerifyCodeSuccess">发送验证成功</string>
    <string name="enterMobile">请输入手机号码</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="enterVerifyCode">请输入短信验证码</string>
    <string name="enterPwd">请输入密码（6-20位字母或数字）</string>
    <string name="enterPwdAgain">请再次输入密码</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="resetPwd">重置密码</string>
    <string name="userInfo">个人信息</string>
    <string name="userIcon">头像</string>
    <string name="userNickName">昵称</string>
    <string name="userDefaultNickName">请称呼我</string>
    <string name="userGender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="userMobile">手机</string>
    <string name="userSign">签名</string>
    <string name="userDefaultSign">请您填写签名</string>
</resources>
