<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mForgetPwdRootView"
    style="@style/MatchMatch.Vertical.Common">

    <com.kotlin.base.widgets.HeaderBar
        android:id="@+id/mHeaderBar"
        style="@style/MatchWrap"
        app:titleText="@string/forgetPwd"/>

    <LinearLayout
        style="@style/MatchWrap.Vertical"
        android:layout_margin="@dimen/common_margin"
        android:background="@drawable/border_corner_all">

        <LinearLayout
            style="@style/MatchWrap.Horizontal">

            <EditText
                android:id="@+id/mMobileEt"
                android:layout_width="0dp"
                android:layout_height="@dimen/common_line_height"
                android:layout_weight="1.0"
                android:background="@null"
                android:drawableLeft="@drawable/icon_phone"
                android:drawablePadding="@dimen/common_padding_small"
                android:hint="@string/enterMobile"
                android:inputType="phone"
                android:paddingLeft="@dimen/common_padding_small"/>

            <View style="@style/DividerFixedWidth.MarginTopBottom"/>

            <com.kotlin.base.widgets.VerifyButton
                android:id="@+id/mVerifyCodeBtn"
                style="@style/WrapMatch"
                android:background="@null"
                android:text="@string/getVerifyCode"
                android:textColor="@color/common_blue"/>
        </LinearLayout>

        <View style="@style/DividerFixedHeight"/>

        <EditText
            android:id="@+id/mVerifyCodeEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:background="@null"
            android:drawableLeft="@drawable/icon_verify_code"
            android:drawablePadding="@dimen/common_padding_small"
            android:hint="@string/enterVerifyCode"
            android:inputType="number"
            android:paddingLeft="@dimen/common_padding_small"/>
    </LinearLayout>

    <Button
        android:id="@+id/mNextBtn"
        style="@style/FullBtnStyle"
        android:text="@string/common_next"/>
</LinearLayout>
