<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mResetPwdRootView"
    style="@style/MatchMatch.Vertical.Common">

    <com.kotlin.base.widgets.HeaderBar
        android:id="@+id/mHeaderBar"
        style="@style/MatchWrap"
        app:titleText="@string/resetPwd"/>

    <LinearLayout
        style="@style/MatchWrap.Vertical"
        android:layout_margin="@dimen/common_margin"
        android:background="@drawable/border_corner_all">

        <EditText
            android:id="@+id/mPwdEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:background="@null"
            android:drawablePadding="@dimen/common_padding_small"
            android:drawableStart="@drawable/icon_pwd"
            android:hint="@string/enterPwd"
            android:inputType="textPassword"
            android:paddingStart="@dimen/common_padding_small"/>

        <View style="@style/DividerFixedHeight"/>

        <EditText
            android:id="@+id/mPwdConfirmEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line_height"
            android:background="@null"
            android:drawablePadding="@dimen/common_padding_small"
            android:drawableStart="@drawable/icon_pwd"
            android:hint="@string/enterPwdAgain"
            android:inputType="textPassword"
            android:paddingStart="@dimen/common_padding_small"/>

    </LinearLayout>

    <Button
        android:id="@+id/mConfirmBtn"
        style="@style/FullBtnStyle"
        android:text="@string/common_confirm"/>
</LinearLayout>
